--- a/package.json
+++ b/package.json
@@ -39,5 +39,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@dazn/acc-sdk-design-system": "^1.3.0",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/material": "^5.10.1",
+    "@shoelace-style/shoelace": "^2.0.0-beta.81",
+    "antd": "^4.22.7"
   }
 }
